Removed BETA features and changed incorrect version name

--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "name": "Google Open",
     "author": "TechLover3000",
     "description": "Just click on the extension and then you'll be able to access the main Google apps (more coming soon)!",
-    "version": "0.1",
-    "version_name": "0.1-prerelease",
+    "version": "1.0",
+    "version_name": "1.0",
     
   
     "permissions": [
