Author change and syntax fix

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
   
     "name": "Google Open",
-    "author": "TechLover3000",
+    "author": "Tech",
     "description": "Just click on the extension and then you'll be able to access the main Google apps (more coming soon)!",
     "version": "1.0",
     "version_name": "1.0",
